Fix ToC dropdown menu spacing when visual next flag is enabled, address icon related feedback
Causes 20 visual progressions regardless of visual next flag, the ToC moves 1px when in the sidebar

Follow up to If3aed0ac401b0abc80c3ad52806eb85b33d43f06

Bug: T321504

--- a/resources/skins.vector.styles/components/Header.less
+++ b/resources/skins.vector.styles/components/Header.less
@@ -24,14 +24,6 @@
 	.vector-feature-visual-enhancement-next-disabled & {
 		.mixin-vector-flush-left-margin-left();
 		.mixin-vector-flush-right-margin-right();
-
-		.mw-ui-icon-flush-left {
-			margin-left: 0;
-		}
-
-		.mw-ui-icon-flush-right {
-			margin-right: 0;
-		}
 	}
 
 	#mw-sidebar-button {
