--- a/resources/skins.vector.styles/components/LanguageButton.less
+++ b/resources/skins.vector.styles/components/LanguageButton.less
@@ -17,10 +17,6 @@
 	// FIXME: Remove mixin when this block is removed.
 	.vector-feature-visual-enhancement-next-disabled & {
 		.mixin-vector-flush-right-margin-right();
-
-		.mw-ui-icon-flush-right {
-			margin-right: 0;
-		}
 	}
 
 	// The language button is a BUTTON ICON not a standalone ICON so different rules apply
